# FaceSense

./: .gitignore  CMakeLists.txt  Dockerfile  License  README.md  generate_dummy_data.py
include/: FFNN.hpp  GMM.hpp  ImageUtils.hpp  Matrix.hpp  PCA.hpp  Utils.hpp
src/: FFNN.cpp  GMM.cpp  Matrix.cpp  PCA.cpp  Utils.cpp  main.cpp
tests/: test_ffnn.cpp  test_gmm.cpp  test_matrix.cpp  test_pca.cpp
